dev: working native translations in Spanish and Chinese

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<p><b>Command:</b> <span id="textBox"><span> </p>
 			<p>Requested Action: <span id="action"><span> </p>
 			<p>Requested Content: <span id="content"><span> </p>
+			<p>Requested Language: <span id="language"><span> </p>
 
 			<i><p id="error"></p></i>
 		</div>
