--- a/index.html
+++ b/index.html
@@ -16,30 +16,46 @@
 	</head>
 	<body>	
 		
-		<div id="toggle_speech"></div>
+		<section id="language_controls">
+			<h2>Language Controls</h2>
+			<div>
+				<h3>STT</h3>
+				<label for="toggle_speech" id="toggle_speech"></label>
+				<select id="select_speech" onchange="Utilities.STT.controls()">
+					<option selected="selected" value="english">English</option>
+					<option value="spanish">Spanish</option>
+					<option value="chinese">Chinese</option>
+				</select>
+			</div>
+			<div>
+				<h3>TTS</h3>
+				<label for="amount">Adjust Speech Speed</label>
+				<select id="select_language" onchange="Utilities.STT.controls()">
+					<option selected="selected" value="1">Normal</option>
+					<option value=".7">Slow</option>
+					<option value=".5">Slowest</option>
+				</select>
+			</div>
+		</section>
 
-		<div id="native_speech"></div>		
+		<hr>
+		
+		<section id="command_data">
+			<h2>User Command</h2>
+			<div class="command">
+				<p><b>Command:</b> <span id="textBox"><span> </p>
+				<p>Requested Action: <span id="action"><span> </p>
+				<p>Requested Content: <span id="content"><span> </p>
+				<p>Requested Language: <span id="language"><span> </p>
 
+				<i><p id="error"></p></i>
+			</div>
+		</section>
 
-		<label for="amount">Adjust Speech Speed</label>
-		<select id="select_language" onchange="Utilities.STT.controls()">
-			<option selected="selected" value="1">Normal</option>
-			<option value=".7">Slow</option>
-			<option value=".5">Slowest</option>
-		</select>
-
-		<div class="command">
-			<p><b>Command:</b> <span id="textBox"><span> </p>
-			<p>Requested Action: <span id="action"><span> </p>
-			<p>Requested Content: <span id="content"><span> </p>
-			<p>Requested Language: <span id="language"><span> </p>
-
-			<i><p id="error"></p></i>
-		</div>
-
+		<hr>
+		
 		<section id="content">
 			<h2>Content</h2>
-
 			<div class="article"></div>
 		</section>		
 
