dev: can now translate in any language on the fly

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 			<div>
 				<h3>STT</h3>
 				<label for="toggle_speech" id="toggle_speech"></label>
-				<select id="select_speech" onchange="Utilities.STT.controls()">
-					<option selected="selected" value="english">English</option>
-					<option value="spanish">Spanish</option>
-					<option value="chinese">Chinese</option>
-				</select>
+				<select id="select_speech" onchange="Utilities.STT.controls()"></select>
 			</div>
 			<div>
 				<h3>TTS</h3>
